k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  labels:
    app: website
spec:
  replicas: 3
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - name: website
          image: quay.io/openinfra/website:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http-web-svc
          livenessProbe:
            httpGet:
              path: /healthz
              port: http-web-svc
          readinessProbe:
            httpGet:
              path: /healthz
              port: http-web-svc
