k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  selector:
    app: website
  ports:
    - name: http
      appProtocol: http
      protocol: TCP
      port: 8080
      targetPort: http-web-svc
