k8s/gateway-prd.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: openinfrastructure-co-gw
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: http
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: openinfrastructure-co-cert
    hosts:
    - openinfrastructure.co
    - www.openinfrastructure.co
