k8s/gateway-stg.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ois-run-gw
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: http
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: ois-run-cert # must be the same as secret in istio-namespace
    hosts:
    - ois.run
    - www.ois.run
