k8s/virtual-service-prd.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: openinfrastructure-co-vs
  namespace: website
spec:
  hosts:
    - openinfrastructure.co
    - www.openinfrastructure.co
  gateways:
    - istio-ingress/openinfrastructure-co-gw
  http:
    - route:
        - destination:
            host: website
